--- a/index.html
+++ b/index.html
@@ -1,159 +1,114 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Сборка и ремонт ПК — Chief_119</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: url('https://images.unsplash.com/photo-1600486913747-55d5d07f9913?auto=format&fit=crop&w=1600&q=80') no-repeat center center fixed;
-      background-size: cover;
-      color: #fff;
-    }
-    body::before {
-      content: "";
-      position: fixed;
-      top:0; left:0; right:0; bottom:0;
-      background-color: rgba(0,0,0,0.6);
-      z-index: -1;
-    }
-    header {
-      background: rgba(0,0,0,0.7);
-      padding: 20px;
-      text-align: center;
-    }
-    section {
-      padding: 20px;
-    }
-    .service, form {
-      background: rgba(0,0,0,0.7);
-      margin-bottom: 20px;
-      padding: 15px;
-      border-radius: 10px;
-    }
-    .contact {
-      background: rgba(0,0,0,0.7);
-      padding: 15px;
-      text-align: center;
-      border-top: 1px solid #333;
-    }
-    .contact a {
-      color: #03e9f4;
-      text-decoration: none;
-    }
-    .price {
-      color: #6aff5c;
-    }
-    input, textarea, button {
-      width: 100%;
-      margin-bottom: 10px;
-      padding: 10px;
-      border: none;
-      border-radius: 5px;
-    }
-    button {
-      background: #03e9f4;
-      color: #000;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #02c3d4;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Комментарии и Онлайн пользователи</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+
+        .comment-section {
+            margin-top: 30px;
+        }
+
+        .comment {
+            border: 1px solid #ccc;
+            padding: 10px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+        }
+
+        .commenter {
+            font-weight: bold;
+            color: #4CAF50;
+        }
+
+        .online-users {
+            margin-top: 20px;
+            font-size: 18px;
+        }
+
+        .online-users span {
+            font-weight: bold;
+            color: #ff6347;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <h1>Сборка и ремонт ПК в Одессе</h1>
-    <p>Chief_119 — надёжный мастер у вас дома</p>
-  </header>
+    <h1>Комментарии на сайте</h1>
 
-  <section>
-    <div class="service">
-      <h2>💻 Сборка ПК</h2>
-      <p>Подбор оптимальных комплектующих под ваш бюджет и задачи (игры, работа, монтаж и т.д.).</p>
-      <p>Профессиональная сборка с аккуратной укладкой кабелей и проверкой всех компонентов.</p>
-      <p>Настройка BIOS, установка системы, тестирование на стабильность.</p>
-      <p class="price">от 450 грн</p>
+    <!-- Форма для добавления комментария -->
+    <div class="comment-section">
+        <h2>Оставьте комментарий</h2>
+        <input type="text" id="username" placeholder="Ваше имя" />
+        <textarea id="comment" placeholder="Ваш комментарий..." rows="4" style="width: 100%;"></textarea>
+        <button onclick="submitComment()">Отправить</button>
     </div>
 
-    <div class="service">
-      <h2>🛠 Ремонт и обслуживание</h2>
-      <p>Глубокая чистка от пыли: корпус, радиаторы, вентиляторы, блок питания.</p>
-      <p>Замена термопасты на процессоре и видеокарте.</p>
-      <p>Поиск и устранение неполадок: не включается, перегревается, зависает и т.п.</p>
-      <p>Замена/апгрейд комплектующих: оперативка, накопители, кулеры, БП и др.</p>
-      <p>Оптимизация и ускорение системы (чистка автозагрузки, обновление ПО).</p>
-      <p class="price">от 300 грн</p>
+    <div id="commentsContainer"></div>
+
+    <!-- Онлайн пользователи -->
+    <div class="online-users">
+        <h3>Онлайн пользователи:</h3>
+        <span id="onlineCount">0</span> человек(а) онлайн
     </div>
 
-    <div class="service">
-      <h2>⚙️ Настройка ПО</h2>
-      <p>Установка Windows, драйверов, антивируса, удаление вирусов.</p>
-    </div>
-  </section>
+    <script>
+        // Массив для хранения комментариев
+        const comments = [];
 
-  <section>
-    <h2 style="text-align:center">📝 Оставить отзыв или заявку</h2>
-    <form id="reviewForm">
-      <label for="name">Ваше имя:</label>
-      <input type="text" id="name" name="name" required>
+        // Счетчик онлайн пользователей
+        let onlineCount = 0;
 
-      <label for="phone">Номер телефона:</label>
-      <input type="tel" id="phone" name="phone" required>
+        // Отображаем комментарии
+        function displayComments() {
+            const commentsContainer = document.getElementById('commentsContainer');
+            commentsContainer.innerHTML = ''; // очищаем контейнер перед рендером
 
-      <label for="message">Опишите проблему или отзыв:</label>
-      <textarea id="message" name="message" rows="5" required></textarea>
+            comments.forEach(comment => {
+                const commentDiv = document.createElement('div');
+                commentDiv.className = 'comment';
+                commentDiv.innerHTML = `
+                    <div class="commenter">${comment.username}</div>
+                    <div>${comment.text}</div>
+                `;
+                commentsContainer.appendChild(commentDiv);
+            });
+        }
 
-      <button type="submit">Отправить</button>
-    </form>
-  </section>
+        // Добавление комментария
+        function submitComment() {
+            const username = document.getElementById('username').value;
+            const commentText = document.getElementById('comment').value;
 
-  <section>
-    <h2 style="text-align:center">⭐ Отзывы клиентов</h2>
-    <div id="reviewsContainer"></div>
-  </section>
+            if (username && commentText) {
+                comments.push({ username, text: commentText });
+                displayComments();
+                clearInputs();
+            } else {
+                alert('Пожалуйста, заполните все поля!');
+            }
+        }
 
-  <div class="contact">
-    <p>📞 <a href="tel:+380969017431">+38 (096) 901‑74‑31</a></p>
-    <p>📨 <a href="https://t.me/Chief_119" target="_blank">@Chief_119</a></p>
-    <p>Все работы — на дому у клиента.</p>
-  </div>
+        // Очищаем поля ввода после отправки комментария
+        function clearInputs() {
+            document.getElementById('username').value = '';
+            document.getElementById('comment').value = '';
+        }
 
-  <script>
-    const form = document.getElementById('reviewForm');
-    const reviewsContainer = document.getElementById('reviewsContainer');
+        // Функция для отслеживания онлайн пользователей
+        function updateOnlineCount() {
+            // Для примера, давай будем случайно увеличивать/уменьшать онлайн пользователей
+            onlineCount = Math.floor(Math.random() * 100) + 1;
+            document.getElementById('onlineCount').textContent = onlineCount;
+        }
 
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const formData = new FormData(form);
-      const response = await fetch('server.php', {
-        method: 'POST',
-        body: formData
-      });
-      const result = await response.json();
-      if (result.success) {
-        loadReviews();
-        form.reset();
-      } else {
-        alert("Ошибка при отправке отзыва.");
-      }
-    });
-
-    async function loadReviews() {
-      const res = await fetch('reviews.json');
-      const reviews = await res.json();
-      reviewsContainer.innerHTML = reviews.reverse().map(r => `
-        <div style="background: rgba(255,255,255,0.1); padding: 10px; margin-bottom: 10px; border-radius: 8px;">
-          <strong>${r.name}</strong> <small style="color:#aaa">(${r.phone})</small>
-          <p>${r.message}</p>
-        </div>
-      `).join('');
-    }
-
-    loadReviews();
-  </script>
+        // Обновляем онлайн пользователей каждую секунду
+        setInterval(updateOnlineCount, 1000);
+    </script>
 </body>
 </html>
+
